# Shard-Engine

./: .gitattributes  .gitignore  build.bat  camera.py  main.py  obj_parser.py  renderer.py
assets/shaders/: debug.vert  normal.frag  normal.vert  proc_skybox.frag  shadow.frag  shadow.vert  skybox.frag  skybox.vert  standard.frag  standard.vert  ui.frag  ui.vert
collisions/: __init__.py  capsule.py  collider.py  collision_solver.py  raycast.py  spatial_grid.py
collisions/spatial_collision_engine/: CMakeLists.txt  build.bat  pyproject.toml  setup.py
collisions/spatial_collision_engine/bindings/: CollisionBindings.cpp
collisions/spatial_collision_engine/python/: __init__.py
collisions/spatial_collision_engine/src/: BVH.cpp  BVH.h  CollisionData.h  CollisionSolver.cpp  CollisionSolver.h  Geometry.h  Mat4.h  Raycast.cpp  Raycast.h  SpatialGrid.cpp  SpatialGrid.h  Vec3.h
collisions/spatial_collision_engine/tests/: Tests.cpp
core/: __init__.py  asset_manager.py  camera.py  engine.py  game_object.py  input_manager.py  material.py  mesh.py  render_pipeline.py  renderer.py  scene.py  transform.py
core/components/: __init__.py  camera.py  capsule_collider.py  input.py  light.py  mesh_collider.py  mesh_renderer.py  player_controller.py  rigidbody.py  transform.py
core/systems/: __init__.py  camera_system.py  collision_system.py  input_system.py  mesh_collider_system.py  mesh_renderer_system.py  player_controller_system.py  transform_system.py
ecs/: __init__.py  component.py  entity.py
gameplay/: __init__.py  player_controller.py
importers/: __init__.py  asset_importer.py
loaders/: __init__.py  obj_parser.py  texture_loader.py
maths/: __init__.py  matrices.py  vector.py
physics/: __init__.py  rigidbody.py
rendering/: __init__.py  debug_renderer.py  shadow_mapper.py  skybox.py
scene_builders/: warehouse_scene.py
scenes/: __init__.py  sponza_scene.py  warehouse_scene.py
shaders/: standard.frag
ui/: __init__.py  editor_ui.py  ui_elements.py  ui_renderer.py
